[gd_scene load_steps=16 format=3 uid="uid://5cdq3qxlhjp8"]

[ext_resource type="Script" path="res://encyclopedia.gd" id="1_v5xwa"]
[ext_resource type="Texture2D" uid="uid://cq8drt7ypvb8l" path="res://sprites/gutbackground.PNG" id="2_x00v3"]
[ext_resource type="FontFile" uid="uid://2g7nibblpvpr" path="res://font/joystix monospace.otf" id="3_kpww4"]
[ext_resource type="PackedScene" uid="uid://b1dig8vs2e5pn" path="res://assets/pill.tscn" id="4_ae4va"]
[ext_resource type="PackedScene" uid="uid://ccgth0js842ey" path="res://assets/acid.tscn" id="5_lgqe5"]
[ext_resource type="PackedScene" uid="uid://6pmc27wiuura" path="res://assets/amp.tscn" id="6_hnyfj"]
[ext_resource type="PackedScene" uid="uid://csv2opykxguuf" path="res://assets/lactose.tscn" id="7_qw20h"]
[ext_resource type="PackedScene" uid="uid://c3ua2wu7fgyl" path="res://assets/t_cells.tscn" id="8_bhr0k"]
[ext_resource type="PackedScene" uid="uid://ba6vkbb4vj8xq" path="res://assets/uv_light.tscn" id="9_nygjy"]
[ext_resource type="PackedScene" uid="uid://bc6kefpd2jmyr" path="res://assets/mucus.tscn" id="10_610iq"]
[ext_resource type="PackedScene" uid="uid://iclncwq35jbw" path="res://assets/cell_wall.tscn" id="11_jo48b"]
[ext_resource type="PackedScene" uid="uid://yvbpwom0naf0" path="res://assets/cadmium.tscn" id="12_25qad"]
[ext_resource type="PackedScene" uid="uid://bp3aawqql2scf" path="res://assets/soil.tscn" id="13_bwh5y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sposr"]
bg_color = Color(0.733333, 0.552941, 0.490196, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wret4"]
bg_color = Color(1, 1, 1, 0.811765)

[node name="build" type="Node"]
script = ExtResource("1_v5xwa")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.2, 0.117647, 0.588235, 1)
self_modulate = Color(0.756863, 0.917647, 1, 1)
position = Vector2(577.25, 322.25)
scale = Vector2(1.81596, 1.81728)
texture = ExtResource("2_x00v3")

[node name="exit" type="Button" parent="."]
offset_left = 1060.0
offset_top = 21.0
offset_right = 1112.0
offset_bottom = 67.0
theme_override_fonts/font = ExtResource("3_kpww4")
theme_override_styles/normal = SubResource("StyleBoxFlat_sposr")
text = "exit
"

[node name="Container" type="Container" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="pill" parent="Container" instance=ExtResource("4_ae4va")]
position = Vector2(207, 156)

[node name="acid" parent="Container" instance=ExtResource("5_lgqe5")]
position = Vector2(609, 116)

[node name="AMP" parent="Container" instance=ExtResource("6_hnyfj")]
position = Vector2(467, 217)

[node name="UV_light" parent="Container" instance=ExtResource("9_nygjy")]
position = Vector2(854, 158)

[node name="mucus" parent="Container" instance=ExtResource("10_610iq")]
position = Vector2(52, 260)

[node name="Lactose" parent="Container" instance=ExtResource("7_qw20h")]
position = Vector2(579, 372)

[node name="T_cells" parent="Container" instance=ExtResource("8_bhr0k")]
position = Vector2(506, 489)

[node name="cadmium" parent="Container" instance=ExtResource("12_25qad")]
position = Vector2(912, 446)

[node name="cell_wall" parent="Container" instance=ExtResource("11_jo48b")]
position = Vector2(844, 539)

[node name="soil" parent="Container" instance=ExtResource("13_bwh5y")]
position = Vector2(177, 601)

[node name="explications" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.5
offset_top = -13.5
offset_right = 189.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_kpww4")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_wret4")
text = "pass on a object"
horizontal_alignment = 1

[node name="tuto" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -521.0
offset_top = 48.0
offset_right = 529.0
offset_bottom = 507.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("3_kpww4")
theme_override_font_sizes/font_size = 30
text = "this place show all elements you will 
discover along the way. 
You already have some informations !

you can now exit and 
press play to finish the level"
horizontal_alignment = 1

[connection signal="button_down" from="exit" to="." method="_on_exit_button_down"]
[connection signal="input_event" from="Container/pill" to="." method="_on_pill_input_event"]
[connection signal="mouse_entered" from="Container/pill" to="." method="_on_pill_mouse_entered"]
[connection signal="mouse_entered" from="Container/acid" to="." method="_on_acid_mouse_entered"]
[connection signal="mouse_entered" from="Container/AMP" to="." method="_on_amp_mouse_entered"]
[connection signal="mouse_entered" from="Container/UV_light" to="." method="_on_uv_light_mouse_entered"]
[connection signal="mouse_entered" from="Container/mucus" to="." method="_on_mucus_mouse_entered"]
[connection signal="mouse_entered" from="Container/Lactose" to="." method="_on_lactose_mouse_entered"]
[connection signal="mouse_entered" from="Container/T_cells" to="." method="_on_t_cells_mouse_entered"]
[connection signal="mouse_entered" from="Container/cadmium" to="." method="_on_cadmium_mouse_entered"]
[connection signal="mouse_entered" from="Container/cell_wall" to="." method="_on_cell_wall_mouse_entered"]
[connection signal="mouse_entered" from="Container/soil" to="." method="_on_soil_mouse_entered"]
